hphp/hack/test/enum_supertyping/typing/function_argument_2.bad.php.exp
ERROR: File "function_argument_2.bad.php", line 17, characters 12-15:
Invalid argument (Typing[4110])
  File "function_argument_2.bad.php", line 13, characters 14-14:
  Expected `G`
  File "function_argument_2.bad.php", line 4, characters 9-11:
  But got `int`
  File "function_argument_2.bad.php", line 4, characters 16-18:
    by the definition of `F`
